Fixed overflow on code for mobile devices

--- a/src/pages/posts/styles.module.scss
+++ b/src/pages/posts/styles.module.scss
@@ -10,11 +10,15 @@
   code {
     background-color: #000;
     width: 100%;
-    display: block;
+    display: inline-block;
     color: #07d404;
     font-weight: 800;
     padding: .5rem;
     font-size: 1.1rem;
+
+    @media (max-width: 720px) {
+      overflow: scroll;
+    }
   }
 
   p {
